# pypi-gpt

./: .gitignore  LICENSE  Makefile  PRIVACY.md  README.md  activate.sh  prep_db.sql  pyproject.toml  run_instructor.py  start_api.sh
src/clepy/: __init__.py  app.py  db.py  models.py
src/pypi_gpt/: __init__.py  app.py  db_models.py  db_queries.py  req_models.py
tests/: test_db_queries.py  test_models.py  test_req_models.py
